# jobhunter-agent

./: .gitignore  AGENTS.md  DESIGN_SPEC.md  README.md  debug_page.html  pyproject.toml  run_playground.py  server.py
app/: __init__.py  agent.py  tools.py
browser_data/: Last Browser  Local State  first_party_sets.db
browser_data/Default/: DIPS  Favicons  History  Preferences  Secure Preferences  Web Data
browser_data/Default/Cache/Cache_Data/: data_0  data_1  (+11 more)
browser_data/Default/DawnGraphiteCache/: index
browser_data/Default/DawnWebGPUCache/: index
browser_data/Default/Extension Rules/: LOG
browser_data/Default/Extension Scripts/: LOG
browser_data/Default/Extension State/: LOG  LOG.old
browser_data/Default/GPUCache/: data_0  data_1  data_2  index
browser_data/Default/Network/: Cookies  Network Persistent State  Reporting and NEL  TransportSecurity
browser_data/Default/Session Storage/: LOG  LOG.old
browser_data/Default/Sessions/: Session_13422697622917675  Session_13422698134357575  Tabs_13422697622964109  Tabs_13422698134509841
browser_data/Default/Site Characteristics Database/: LOG  LOG.old
browser_data/Default/shared_proto_db/: LOG  LOG.old
browser_data/GrShaderCache/: data_0  data_1  f_000001  f_000002  index
browser_data/GraphiteDawnCache/: index
browser_data/ShaderCache/: index
docs/bugs/: 001-onlinejobs-scraper-failure.md
docs/superpowers/plans/: 2026-05-08-jobhunter-cv-personalization.md
scripts/: capture_page.py  debug_profile.py  debug_selectors.py  debug_sync.py  login_onlinejobs.py  scrape_jobs.py
ui/: index.html
(+38 files in other folders)
