[project]
name = "jobhunter"
version = "0.1.0"
description = "Job matching agent with resume parsing and cover letter generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=0.1.0",
    "google-genai>=0.1.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.59.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "openai>=2.36.0",
    "python-docx>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.agents-cli]
agent = "adk"
prototype = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["ui", "browser_data", "scripts", "docs", "graphify-out"]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
